--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ dist: trusty
 
 env:
   global:
-    -ANDROID_API_LEVEL=30
-    -ANDROID_BUILD_TOOLS_VERSION:30.0.0
-    -ANDROID_EMU_API_LEVEL=22
-    -ANDROID_ABI=armeabi-v7a
-    -QEMU_AUDIO_DVR=none
+    - ANDROID_API_LEVEL=30
+    - ANDROID_BUILD_TOOLS_VERSION:30.0.0
+    - ANDROID_EMU_API_LEVEL=22
+    - ANDROID_ABI=armeabi-v7a
+    - QEMU_AUDIO_DVR=none
 
 android:
   components:
